# GstSeamCrop

./: README
evaluation/: evaluationseamcrop  evaluationseamcrop.c  generate_graphs.py  parse_output.py  parse_top.sh  run.sh
evaluation/parsed_data/: 1_1_1_Parsed.txt  1_1_2_Parsed.txt  1_1_3_Parsed.txt  1_2_1_Parsed.txt  1_2_2_Parsed.txt  1_2_3_Parsed.txt  1_3_1_Parsed.txt  1_3_2_Parsed.txt  1_3_3_Parsed.txt  2_1_1_Parsed.txt  2_1_2_Parsed.txt  2_1_3_Parsed.txt  2_2_1_Parsed.txt  2_2_2_Parsed.txt  2_2_3_Parsed.txt  2_3_1_Parsed.txt  2_3_2_Parsed.txt  2_3_3_Parsed.txt  3_1_1_Parsed.txt  3_1_2_Parsed.txt  3_1_3_Parsed.txt  3_2_1_Parsed.txt  3_2_2_Parsed.txt  3_2_3_Parsed.txt  3_3_1_Parsed.txt  3_3_2_Parsed.txt  3_3_3_Parsed.txt  4_1_1_Parsed.txt  4_1_2_Parsed.txt  4_1_3_Parsed.txt  4_2_1_Parsed.txt  4_2_2_Parsed.txt  4_2_3_Parsed.txt  4_3_1_Parsed.txt  4_3_2_Parsed.txt  4_3_3_Parsed.txt  5_1_1_Parsed.txt  5_1_2_Parsed.txt  5_1_3_Parsed.txt  5_2_1_Parsed.txt  (+5 more)
evaluation/parsed_data/top/: CPU_2_1_1.txt  CPU_2_1_2.txt  CPU_2_1_3.txt  CPU_2_2_1.txt  CPU_2_2_2.txt  CPU_2_2_3.txt  CPU_2_3_1.txt  CPU_2_3_2.txt  CPU_2_3_3.txt  CPU_3_1_1.txt  CPU_3_1_2.txt  CPU_3_1_3.txt  CPU_3_2_1.txt  CPU_3_2_2.txt  CPU_3_2_3.txt  CPU_3_3_1.txt  CPU_3_3_2.txt  CPU_3_3_3.txt  MEM_2_1_1.txt  MEM_2_1_2.txt  MEM_2_1_3.txt  MEM_2_2_1.txt  MEM_2_2_2.txt  MEM_2_2_3.txt  MEM_2_3_1.txt  MEM_2_3_2.txt  MEM_2_3_3.txt  MEM_3_1_1.txt  MEM_3_1_2.txt  MEM_3_1_3.txt  MEM_3_2_1.txt  MEM_3_2_2.txt  MEM_3_2_3.txt  MEM_3_3_1.txt  MEM_3_3_2.txt  MEM_3_3_3.txt
evaluation/raw_data/: 1_1_1.txt  1_1_2.txt  1_1_3.txt  1_2_1.txt  1_2_2.txt  1_2_3.txt  1_3_1.txt  1_3_2.txt  1_3_3.txt  2_1_1.txt  2_1_2.txt  2_1_3.txt  2_2_1.txt  2_2_2.txt  2_2_3.txt  2_3_1.txt  2_3_2.txt  3_1_1.txt  3_1_2.txt  3_1_3.txt  3_2_1.txt  3_2_2.txt  3_2_3.txt  3_3_1.txt  3_3_2.txt  3_3_3.txt  4_1_1.txt  4_1_2.txt  4_1_3.txt  4_2_1.txt  4_2_2.txt  4_2_3.txt  4_3_1.txt  4_3_2.txt  4_3_3.txt  5_1_1.txt  5_1_2.txt  5_1_3.txt  5_2_1.txt  5_2_2.txt  (+4 more)
seamcrop/: AUTHORS  Makefile.inc  README  autogen.sh  configure.ac  cudalt.py
seamcrop/src/: Makefile.am  gstseamcrop.c  gstseamcrop.h
seamcrop/src/seamcrop-module/: BufferWriter.cpp  BufferWriter.h  Makefile.am  seamCropCuda.cpp  seamCropCuda.h  seamCropCuda_Kernels.cu  seamCropCuda_Kernels.h  seamCropCuda_KernelsTex.cu  seamCropWrapper.cpp  seamCropWrapper.h  seamCrop_commons.h
seamcrop/src/seamcrop-module/include/: MocaConfig.h.in  undef_atomics_int128.h
seamcrop/src/seamcrop-module/include/cudaHDR/: Cuda2DPitchedMemoryHandle.h  CudaExposureHandle.h  CudaImage16SHandle.h  CudaImage32FHandle.h  CudaImage8UHandle.h  CudaImageHandle.h  CudaVectorHandle.h  CudaWrapper.h  DataStructures.h  DeviceManager.h  GPUHistogramReg.h  GPUToneMapping.h  KernelFunctions.h
seamcrop/src/seamcrop-module/include/feature/: FaceDetection.h  Feature.h  Histogram.h  HistogramReg.h  LineHistogram.h  OpticalFlow.h  OptimalShutter.h  WardImageReg.h
seamcrop/src/seamcrop-module/include/filter/: CvtColorSpace.h  DisparityMapBuilder.h  Filter.h  FrequencyTunedSaliency.h  HDR.h  HDRStitching.h  HistogramSaliency.h  OptHDR.h  SeamCarvingImage.h  SeamCropImage.h  SequenceHDR.h  ToneMapping.h
seamcrop/src/seamcrop-module/include/gui/: CamControl.h  CamSelect.h  CameraWindow.h  DisplayWindow.h  FLTKHeaders.h  FeatureControl.h  GUIutils.h  HistogramWindow.h  ImagePanel.h  ImageWindow.h  VideoWindow.h
seamcrop/src/seamcrop-module/include/io/: BufferReader.h  BufferWriter.h  CameraFeature.h  CameraReader.h  DC1394CamFeature.h  DC1394Reader.h  DC1394Reader_FreeRunning.h  DC1394Reader_Triggered.h  HDRExposureIO.h  HDRImageIO.h  IO.h  ImageFileReader.h  ImageFileWriter.h  PseudoCameraFeature.h  PseudoCameraReader.h  Reader.h  VideoFileReader.h  VideoPGMReader.h  VideoPGMWriter.h  VideoPPMReader.h  VideoPPMWriter.h  VideoReader.h  VideoWriter.h  Writer.h
seamcrop/src/seamcrop-module/include/tools/: Drawing.h  KalmanFilter.h  Maths.h  NLinSolver.h  Thread.h  Timing.h
seamcrop/src/seamcrop-module/include/types/: BlockingQueue.h  CameraImage.h  Color.h  Exposure.h  Image16S.h  Image32F.h  Image8U.h  ImageBase.h  Matrix.h  MocaException.h  MocaTypes.h  Rect.h  Size.h  Vector.h
